--- a/Exemplos/Exemplos/Capitulo01/ExemploSwitch.xaml
+++ b/Exemplos/Exemplos/Capitulo01/ExemploSwitch.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <ContentPage
-    x:Class="Exemplos.Capitulo01.ExemploImage"
+    x:Class="Exemplos.Capitulo01.ExemploSwitch"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="Image">
+    Title="Switch">
     <ContentPage.Content>
-        <Image />
+        <Switch />
     </ContentPage.Content>
 </ContentPage>
