--- a/Exemplos/Exemplos/Capitulo01/ExemploImageButton.xaml
+++ b/Exemplos/Exemplos/Capitulo01/ExemploImageButton.xaml
@@ -5,6 +5,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="ImageButton">
     <ContentPage.Content>
-        <ImageButton />
+        <ImageButton
+            Aspect="AspectFill"
+            BackgroundColor="Orange"
+            HeightRequest="300"
+            HorizontalOptions="Center"
+            Source="monkey.jpg"
+            VerticalOptions="Center"
+            WidthRequest="300" />
     </ContentPage.Content>
 </ContentPage>
