Ajustes nos exemplos do Button

--- a/Exemplos/Exemplos/Capitulo01/ExemploButton.xaml
+++ b/Exemplos/Exemplos/Capitulo01/ExemploButton.xaml
@@ -10,10 +10,11 @@
             BorderColor="Black"
             BorderWidth="4"
             Clicked="Button_Clicked"
-            ContentLayout="Top,60"
+            ContentLayout="Top,50"
             CornerRadius="30"
             FontAttributes="Bold"
             FontSize="Medium"
+            HeightRequest="300"
             HorizontalOptions="Center"
             ImageSource="banana.png"
             Pressed="Button_Pressed"
