Ajustar exemplo da demo do timepicker

--- a/Exemplos/Exemplos/Capitulo01/ExemploTimePicker.xaml
+++ b/Exemplos/Exemplos/Capitulo01/ExemploTimePicker.xaml
@@ -8,11 +8,9 @@
         <TimePicker
             x:Name="MeuTimePicker"
             BackgroundColor="Orange"
-            FontAttributes="Bold"
-            Format="t"
+            Format="hh:mm tt"
             HorizontalOptions="Center"
-            TextColor="Yellow"
-            Time="11:00"
+            PropertyChanged="MeuTimePicker_PropertyChanged"
             VerticalOptions="Center" />
     </ContentPage.Content>
 </ContentPage>
